fix: Disable text selection registering as phone number on mobile | Update user list on add + delete | Auto refresh for new messages

--- a/src/assets/css/_global.css
+++ b/src/assets/css/_global.css
@@ -45,3 +45,10 @@ input {
 }
 
 button { cursor: pointer; }
+
+/* Stop input zoom on focus */
+@media screen and (max-width: 767px) {
+  input, select, textarea {
+    font-size: 16px;
+  }
+}
